--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: baseapp
+name: madeb75
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -57,6 +57,9 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flavor: ^2.0.0  
   flutter_gen: ^5.5.0+1
+  toastification: ^3.0.2
+  flutter_form_builder: ^10.0.1
+  form_builder_validators: ^11.1.2
 
 dev_dependencies:
   flutter_test:
