--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   toastification: ^3.0.2
   flutter_form_builder: ^10.0.1
   form_builder_validators: ^11.1.2
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
