--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "baseapp",
-    "short_name": "baseapp",
+    "name": "madeb75",
+    "short_name": "madeb75",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
