--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = baseapp
+PRODUCT_NAME = madeb75
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.baseapp
+PRODUCT_BUNDLE_IDENTIFIER = com.madeb75.app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
