--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: madeb75
-description: "Plateforme d'inscription 75ans et 4ème édition JDM"
+description: "Plateforme d'inscription pour les 75ans et 4ème édition JDM"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
