--- a/web/manifest.json
+++ b/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#2153b8",
-    "description": "A new Flutter project.",
+    "description": "Plateforme d'inscription pour les 75ans et 4ème édition JDM",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
